Fix: gha zipping at wrong folder

--- a/.github/workflows/ci-android.yml
+++ b/.github/workflows/ci-android.yml
@@ -79,6 +79,7 @@ jobs:
       with:
         type: 'zip'
         filename: 'libzip-ci.zip'
+        directory: './build'
 
     - name: Update binaries of release
       uses: svenstaro/upload-release-action@v1-release
