--- a/.github/workflows/ci-android.yml
+++ b/.github/workflows/ci-android.yml
@@ -1,4 +1,4 @@
-name: CI Android
+name: Release library - CI (Android)
 
 on:
   push:
@@ -85,7 +85,7 @@ jobs:
       uses: svenstaro/upload-release-action@v1-release
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ./libzip-android-all-ci.zip
+        file: ./build/libzip-android-all-ci.zip
         asset_name: libzip-android-all-ci.zip
         tag: CI
         overwrite: true
