Fix: error in lib release?

--- a/.github/workflows/ci-android.yml
+++ b/.github/workflows/ci-android.yml
@@ -85,7 +85,7 @@ jobs:
       uses: svenstaro/upload-release-action@v1-release
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ./build/libzip-android-all-ci.zip
+        file: libzip-android-all-ci.zip
         asset_name: libzip-android-all-ci.zip
         tag: 'Latest release (Android)'
         overwrite: true
