Fix: wrong keyword workflow_dispatch

--- a/.github/workflows/ci-android.yml
+++ b/.github/workflows/ci-android.yml
@@ -6,7 +6,7 @@ env:
 on:
   push:
   
-  dispatch:
+  workflow_dispatch:
     inputs:
       release_version:
         description: 'Release version (no space)'
